JAVA-43849: Changes made for removing build warnings